⚒ Fix playoff style on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -455,6 +455,7 @@ td {
     display: flex;
     flex-direction: column;
     width: 100%;
+    min-width: 100px;
     text-align: center;
 }
 
